--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "wilson-interval",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Used to calculate the high bound, low bound, and center of a Wilson score interval",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "test.js"
   },
   "repository": {
     "type": "git",
