--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wilson-interval",
-  "version": "1.1.3",
-  "description": "Used to calculate the high bound, low bound, and center of a Wilson score interval",
+  "version": "1.1.4",
+  "description": "Used to calculate the high bound, low bound, and center of a Wilson score interval. Features support for continuity correction and Singleton's adjustment.",
   "main": "index.js",
   "scripts": {
     "test": "test.js"
