--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wilson-interval",
-  "version": "1.1.6",
+  "version": "1.1.7",
   "description": "Used to calculate the high bound, low bound, and center of a Wilson score interval. Features support for continuity correction and Singleton's adjustment.",
   "main": "index.js",
   "scripts": {
@@ -28,5 +28,8 @@
   "bugs": {
     "url": "https://github.com/erikfox/wilson-interval/issues"
   },
-  "homepage": "https://github.com/erikfox/wilson-interval"
+  "homepage": "https://github.com/erikfox/wilson-interval",
+  "dependencies": {
+    "pnormaldist": "^1.0.0"
+  }
 }
