--- a/package.json
+++ b/package.json
@@ -28,15 +28,20 @@
   "main": "./lib/index.js",
   "scripts": {
     "build": "babel ./src/index.js --out-file ./lib/index.js",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint src"
   },
   "dependencies": {
     "pnormaldist": "^1.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-eslint": "^7.2.3",
     "babel-jest": "^20.0.3",
     "babel-preset-env": "^1.6.0",
+    "eslint": "^4.3.0",
+    "eslint-plugin-babel": "^4.1.2",
+    "eslint-plugin-jest": "^20.0.3",
     "jest": "^20.0.4"
   }
 }
