--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lint": "eslint src"
   },
   "dependencies": {
+    "mathjs": "^3.15.0",
     "pnormaldist": "^1.0.0"
   },
   "devDependencies": {
